8.0.0
 - C++20 is now the oldest C++ version that libpqxx supports.
 - "String conversion" to `std::string_view` is now supported. (#694)
 - **Beware lifetime** when "converting" a string to `std::string_view`!
 - Conversion from string to `char const *` is no longer allowed.
 - Binary data can be any `std::contiguous_range` of `std::byte`. (#925)
 - Generic `quote()` takes `always_null` into account.
 - The libpqxx exceptions now have a `std::source_location`.
 - More getters are now `noexcept`.
 - Retired `binarystring` and its headers.  Use `blob` instead.
 - Retired `connection_base` type alias.  Use `connection`.
 - Retired `pqxx::encrypt_password()`.  Use the ones in `pqxx::connection`.
 - Retired `pqxx::prepare::dynamic_params`.  Use `pqxx::params`.
 - Retired deprecated `stream_to` constructors.  Use factory functions.
 - Retired `transaction_base::unesc_raw()`.  Use `unesc_bin()`.
 - Retired `transaction_base::quote_raw()`.  Use `quote()` with `bytes_view`.
 - Retired result row slicing.
 - Deprecated `field` constructors are no longer publicly accessible.
 - Assume compiler supports concepts.
 - Assume compiler supports integral conversions in `charconv`.
 - Assume compiler supports spans, ranges, and `cmp_less` etc.
 - Assume compiler supports `std::remove_cvref_t` etc.
 - Assume compiler supports `std::filesystem::path`.
 - Assume compiler supports `[[likely]]` & `[[unlikely]]`.
 - Assume compiler supports `ssize()`.
 - Assume compiler supports `std::source_location`.
 - Assume compiler supports ISO-646 without needing `<ciso646>` header.
7.10.1
 - Fix string conversion buffer budget for arrays containing nulls. (#921)
 - Remove `-fanalyzer` option again; gcc is still broken.
 - Oops, no, minimum CMake version is not 3.28, but 3.12!
 - Fix warnings on compilers that accept `[[assume]]` with a warning. (#928)
 - Can't pass parameters to streaming query.
7.10.0
 - Deprecate `errorhandler`; replace with lambda-friendly "notice handlers."